--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.9.5",
+    "@graphql-tools/load-files": "^7.0.0",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6"
   },
